<resources>
    <string name="app_name">Smart Control</string>
    <string name="title_activity_home_page">Smart Control</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Kitchen Room -->
    <string name="kitchen_index_text">Welcome to Smart Kitchen</string>
    <string name="kitchen_index_button">Start cooking!</string>
    <string name="kitchen_list_view">Select a kitchen appliance: </string>
    <string name="turn_on">Turn On</string>
    <string name="turn_off">Turn Off</string>
    <string name="kitchen_icon">Kitchen Icon</string>
    <string name="action_back">Back</string>
    <string name="fridge_temperature">Fridge Temperature</string>
    <string name="freezer_temperature">Freezer Temperature</string>
    <string name="init_fridge_temp">0°C</string>
    <string name="init_freezer_temp">-10 °C</string>
    <string name="action_add_item">Add Food Item</string>
    <string name="action_drop_item">Delete Food Item</string>
    <string name="enter_food_name">Enter food name: </string>
    <string name="enter_food_description">Enter description for this item: </string>
    <string name="fridge_text">Fridge</string>
    <string name="freezer_text">Freezer</string>
    <string name="confirm_item_delete">Are you sure you want to delete the selected item?</string>
    <string name="action_kitchen_help">Kitchen Help</string>
    <string name="kitchen_help_msg">Author: Abby Sun. Version 1.
        Access kitchen appliances by clicking the cooking pot icon or go to the kitchen fragment page.</string>
    <string name="action_help">Help</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="delete_from">Delete From: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset">reset</string>
    <string name="enter_time">Please Enter Time in Seconds</string>
    <string name="stop">Stop</string>
    <string name="stop_microwave">Stop Microwave and Reset Timer</string>
    <string name="control_kitchen_light">Control Kitchen Light</string>


    <!-- Living Room -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="about_title">About</string>
    <string name="about_livingroom">Author: Chase Thorne\nVersion: 1.0\n\nInstructions:</string>
    <string name="about_livingroomlist">\tList controls:
        \n\- To add an item to the list, enter the name in the text box, and press the (+) icon.
        \n\- To remove an item from the list, enter the name in the text box, and press the garbage can icon.</string>
    <string name="about_television">\tTelevision Controls:
        \n\- Power on or off the TV with the top-left button.
        \n\- Navigate the menus with the arrow buttons.
        \n\- Select a menu item with the Enter button, located in the center of the arrows
        \n\- Enter the desired channel in the text box below the arrows.
        \n\- The back button, located to the bottom left, returns you to your previous page or channel.
        \n\- The microphone prompts you to speak aloud the desired channel to go to, rather than typing it in the text box.</string>
    <string name="about_lights">\tLight Controls:
        \n\- Move the sliders to control the lights.
        \n\- Left to dim or shut off, right to brighten or turn on.
        \n\- Click the \"CHOOSE COLOR\" button to change the light\'s color.</string>
    <string name="about_blinds">\tBlinds Controls:
        \n\- Move the sliders control the blinds.
        \n\- Left to lower, right to raise.</string>
    <string name="about_credits">\tCredits:
        \nBlinds icons from Icons8 @ https://icons8.com</string>
    <string name="livingroom_television">Television</string>
    <string name="livingroom_lights">Lights</string>
    <string name="livingroom_blinds">Blinds</string>
    <string name="livingroom_input_hint">Add or Remove Item</string>
    <string name="television_input">Enter channel</string>
    <string name="television_desc_up">Up button</string>
    <string name="television_desc_left">Left button</string>
    <string name="television_desc_enter">Enter button</string>
    <string name="television_desc_right">Right button</string>
    <string name="television_desc_down">Down button</string>
    <string name="television_desc_input">Channel input box</string>
    <string name="television_desc_back">Back button</string>
    <string name="television_desc_mic">Voice activation button</string>
    <string name="blinds_1">Left</string>
    <string name="blinds_2">Middle</string>
    <string name="blinds_3">Right</string>
    <string name="light_1">Lamp 1</string>
    <string name="light_2">Lamp 2</string>
    <string name="light_3">Lamp 3</string>
    <string name="light_3_color">Choose color</string>
    <string name="dialog_color_title">Color</string>
    <string name="dialog_color_message">Choose a color</string>
    <string name="dialog_color_alpha">Alpha</string>
    <string name="dialog_color_red">Red</string>
    <string name="dialog_color_green">Green</string>
    <string name="dialog_color_blue">Blue</string>


    <string name="title_activity_kitchen_lighting">KitchenLightingActivity</string>
    <string name="title_activity_cooking_fragments">CookingFragmentsActivity</string>
    <string name="title_activity_fridge">FridgeActivity</string>
    <string name="title_activity_kitchen_light">KitchenLightActivity</string>

    <!--House Setting-->
    <string name="House_Setting">House Setting</string>
    <string name="Outside_Weather">Outside Weather</string>
    <string name="title_activity_garage">Garage</string>
    <string name="title_activity_house_temp">HouseTemp</string>
    <string name="title_activity_weather">Weather</string>
    <string name="title_weather_list">Weathers</string>
    <string name="title_weather_detail">Weather Detail</string>
    <string name = "house_garage">Garage Setting</string>
    <string name = "house_tempsetting">House Temperature</string>
    <string name = "house_weather">Outdoor Weather</string>
    <string name = "about">ABOUT</string>

<!--Garage-->
    <string name = "garage_light">Garage Light</string>
    <string name = "garagedoor_openner">Garage Door</string>
    <string name = "light_on">On</string>
    <string name = "light_off">off</string>
    <string name = "door_open">Open</string>
    <string name = "door_close">Close</string>

    <!-- Weather Setting-->
    <string name="change_city">Change city</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_list_view_temp">ListViewTemp</string>
<!--House Temperature-->
    <string name="set_house_temp">Set House Temperature</string>
    <string name="input_temp_hint">Input Temperature</string>
    <string name="select_time">Select Time</string>
    <string name="input_time_hint">Set Time</string>

</resources>
