<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:text="@string/about_livingroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <TextView
        android:text="@string/about_livingroomlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <TextView
        android:text="@string/about_television"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <TextView
        android:text="@string/about_lights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <TextView
        android:text="@string/about_blinds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <TextView
        android:text="@string/about_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"/>

</LinearLayout>