<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sun.abby.cst2335_finalproject.FridgeActivity">
    <item
        android:id="@+id/action_add_item"
        android:orderInCategory="100"
        android:title="@string/action_add_item"
        android:icon="@drawable/add"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_drop_item"
        android:orderInCategory="100"
        android:title="@string/action_drop_item"
        android:icon="@drawable/minus"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        android:icon="@drawable/minus"
        app:showAsAction="never" />

</menu>
