<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:src="@drawable/food"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="@android:color/holo_orange_dark"
        android:contentDescription="@string/app_name" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/dialog_relative_layout"
        android:columnCount="2"
        android:rowCount="1">

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/is_fridge"
                android:text="@string/fridge_text"
                android:checked="true" />

            <RadioButton
                android:text="@string/freezer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/is_freezer" />
        </RadioGroup>

    </GridLayout>

    <EditText
        android:id="@+id/custom_dialog_name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/enter_food_name" />
    <EditText
        android:id="@+id/custom_dialog_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/enter_food_description"
        android:inputType="text" />

</LinearLayout>