<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.sun.abby.cst2335_finalproject.HouseTemp">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_house_temp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email"
        app:backgroundTint="@android:color/holo_green_light" />

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="495dp"
        android:layout_marginTop="50dp">


        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_time_hint"
            android:layout_alignParentLeft="true"
            android:id="@+id/in_time" />

        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:text="@string/select_time"
            android:id="@+id/btn_time" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/input_temp_hint"
            android:ems="10"
            android:layout_below="@+id/btn_time"
            android:layout_alignParentStart="true"
            android:layout_marginTop="12dp"
            android:id="@+id/input_temp" />

        <Button
            android:text="@string/set_house_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_temp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:id="@+id/sent_db"
            android:onClick = "callListView"/>


        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/sent_db"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:id="@+id/temp_data_listview"
            android:background="@android:color/darker_gray"
            android:textSize="20sp"
            android:typeface="monospace"
            android:textStyle="normal|bold|italic"/>

        <TextView
            android:text=" C\u00B0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/input_temp"
            android:layout_toRightOf="@+id/input_temp"
            android:id="@+id/textView2" />

    </RelativeLayout>




</android.support.design.widget.CoordinatorLayout>
